--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "type": "module",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongodb": "^7.0.0",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.11"
   }
 }
