--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongodb": "^7.0.0",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.12",
     "nodemon": "^3.1.11"
   }
 }
